Archives/bot-pi.log
/home/pi/Documents/DrahmstrasseBot/run-on-start-pi.sh: 6: /home/pi/Documents/DrahmstrasseBot/run-on-start-pi.sh: conda: not found
ssh: Could not resolve hostname github.com: Temporary failure in name resolution
fatal: Impossilble de lire le dépôt distant.

Veuillez vérifier que vous avez les droits d'accès
et que le dépôt existe.
  File "drahmbot.py", line 133
    offer = f"{count} cadeaux à {receiver}"
                                          ^
SyntaxError: invalid syntax
